# openconnect-vpn

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
assets/fonts/: NotoSansCJK-NOTICE.txt
docs/: ARCHITECTURE.md  BUILD_AND_RELEASE.md  TROUBLESHOOTING.md  USER_GUIDE.md
src/: i18n.rs  lib.rs  main.rs
src/application/: mod.rs  vpn.rs
src/domain/: connection.rs  credentials.rs  mod.rs
src/infrastructure/: mod.rs  openconnect.rs
src/ui/: app.rs  colors.rs  mod.rs  theme.rs  widgets.rs
tests/: localization.rs  vpn_behaviour.rs
