[package]
name = "openconnect-vpn-gui"
version = "0.1.0"
edition = "2024"
description = "Cliente gráfico genérico para VPNs compatíveis com OpenConnect"
license = "MIT"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_extras = { version = "0.31", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
zeroize = "1.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
